--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-python
-numpy
-pandas
-matplotlib
-seaborn
-scikit-learn
-keras
-html
-css
-javaScript
-flask
+joblib==1.1.0
+keras==2.7.0
+matplotlib==3.5.0
+missingno==0.5.0
+numpy==1.21.4
+opencv_python==4.5.5.62
+pandas==1.3.4
+scikit_learn==1.0.2
+seaborn==0.11.2
+tensorflow==2.7.0
