--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 joblib==1.1.0
-keras==2.7.0
+Keras==2.1.5
 matplotlib==3.5.0
 missingno==0.5.0
 numpy==1.21.4
@@ -9,3 +9,8 @@ scikit_learn==1.0.2
 seaborn==0.11.2
 flask==2.1.1
 gunicorn
+Werkzeug>=0.15.3
+gevent==1.2.2
+pillow>=6.2.0
+h5py==2.7.0
+tensorflow>=1.12.1
