--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ scikit_learn==1.0.2
 seaborn==0.11.2
 flask==2.1.1
 gunicorn
-Werkzeug>=0.15.3
-gevent==1.2.2
-pillow>=6.2.0
+Werkzeug
+gevent
+pillow
 h5py
-tensorflow==2.1
+tensorflow
