--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ pandas==1.3.4
 scikit_learn==1.0.2
 seaborn==0.11.2
 flask==2.1.1
-gunicorn
-Werkzeug
-gevent
-pillow
-h5py
-tensorflow==2.5.0rc0
+Werkzeug>=0.15.3
+gevent==1.2.2
+pillow>=6.2.0
+h5py==2.7.0
+tensorflow>=1.12.1
+gunicorn==>=19.5.0
