--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-joblib==1.1.0
-Keras
-matplotlib==3.5.0
-missingno==0.5.0
-numpy==1.21.4
-opencv_python==4.5.5.62
-pandas==1.3.4
-scikit_learn==1.0.2
-seaborn==0.11.2
-flask==2.1.1
-Werkzeug>=0.15.3
-gevent==1.2.2
-pillow>=6.2.0
-h5py==2.7.0
+joblib
+keras
+matplotlib
+missingno
+numpy
+opencv_python
+pandas
+scikit_learn
+seaborn
+flask
+Werkzeug
+gevent
+pillow
+h5py
 tensorflow
 gunicorn
