--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
-joblib
 keras
-matplotlib
 missingno
 numpy
 opencv_python
-pandas
 scikit_learn
-seaborn
 flask
 Werkzeug
 gevent
+joblib
 pillow
 h5py
-tensorflow-cpu
+tensorflow
 gunicorn
