--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-keras
 missingno
 numpy
 opencv_python
@@ -9,5 +8,6 @@ gevent
 joblib
 pillow
 h5py
-tensorflow
+tensorflow-cpu
 gunicorn
+keras==2.4.0
